fix: color contrast

--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -31,7 +31,7 @@
 
     p {
       font-size: 1em;
-      color: #607b96;
+      color: #8CA5B5;
     }
 
     &Links {
