--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .Footer {
   border-top: 1px solid #1e2d3d;
   background-color: #011627;
-  color: #607b96;
+  color: #8CA5B5;
   z-index: 100000;
   display: flex;
   align-items: flex-end;
