--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -1,7 +1,7 @@
 .Navbar {
   display: flex;
   border-bottom: 1px solid #1e2d3d;
-  color: #607b96;
+  color: #8CA5B5;
   background-color: #011627;
 
   &Links {
@@ -87,7 +87,7 @@
         height: 3px;
         width: 30px;
         display: inline-block;
-        background-color: #607b96;
+        background-color: #8CA5B5;
         margin: 2.5px 0;
         cursor: pointer;
         transition: all 0.3s linear;
