--- a/layout/BoxLayout/BoxLayout.module.scss
+++ b/layout/BoxLayout/BoxLayout.module.scss
@@ -25,7 +25,7 @@
         align-items: center;
         width: fit-content;
         padding: 0.5em;
-        color: #607b96;
+        color: #8CA5B5;
         border-right: 1px solid #1e2d3d;
 
         span {
