--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -49,7 +49,7 @@
 
       code {
         display: table-cell;
-        color: #607b96;
+        color: #8CA5B5;
         padding-left: 2em !important;
 
         .or {
@@ -65,7 +65,7 @@
         }
 
         .sy {
-          color: #607b96;
+          color: #8CA5B5;
         }
       }
 
@@ -80,7 +80,7 @@
 
       span.th::before {
         font-size: 90%;
-        color: #607b96;
+        color: #8CA5B5;
       }
 
       span.tr.firstRow span.th {
@@ -122,7 +122,7 @@
   }
 
   .ThankYou {
-    color: #607b96;
+    color: #8CA5B5;
     width: 100%;
     padding: 10.75em 0;
 
@@ -142,7 +142,7 @@
 
       label {
         display: block;
-        color: #607b96;
+        color: #8CA5B5;
         margin-bottom: 0.5em;
       }
 
