--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -75,5 +75,5 @@
 }
 
 .comment {
-  color: #607b96;
+  color: #8CA5B5;
 }
