--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -27,7 +27,7 @@
       }
 
       &:nth-of-type(2) {
-        color: #607b96;
+        color: #8CA5B5;
       }
     }
   }
